--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ nav ul li {
       
     
   }
-  .formDiv {
+  .formClassDiv {
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -120,7 +120,7 @@ nav ul li {
     margin-bottom: 50px;
 
   }
-  .formPerfil {
+  .formClass {
     display: flex;
     flex-direction: column;
     background-color: lightsalmon;
@@ -131,7 +131,7 @@ nav ul li {
 
   }
   
-  .containerFotos { 
+  .containerResultados { 
     display: flex;   
     flex-direction: column;
     border: 1px;
